<resources>
    <string name="app_name">LayoutsApplication</string>
    <string name="constraintlayout">Constraint Layout</string>
    <string name="horizontalguideline">HorizontalGuideline</string>
    <string name="regresar">Regresar</string>
    <string name="linear_layout_h">Linear Layout (horizontal)</string>
    <string name="linear_layout_v">Linear Layout (vertical)</string>
    <string name="table_layout">Table Layout</string>
    <string name="table_row">Table Row</string>
    <string name="boton">Ocultar</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="space_layout">Space Layout</string>
    <string name="hola_que_pasa">Hola Que pasa</string>

</resources>
